Move most types from StackSet to StackSetTypes

--- a/xmonad.cabal
+++ b/xmonad.cabal
@@ -65,6 +65,7 @@ library
                         XMonad.ManageHook
                         XMonad.Operations
                         XMonad.StackSet
+                        XMonad.StackSetTypes
     other-modules:      Paths_xmonad
 
     build-depends: base < 5 && >=3,
